Removed bad targets
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/branches/caGrid-1_4_SHA2/Software/core@18049 dd7b0c16-3c94-4492-92de-414b6a06f0b1