@@ -311,50 +311,4 @@ GSBT - Globus Service Build Tools
 		
 	</target>
 
-	<property name="launch4j.dir" value="Z:/jgeorge/Downloads/launch4j"/>
-	<target name="exe">
-		<taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpath="${launch4j.dir}/launch4j.jar:${launch4j.dir}/lib/xstream.jar" />
-		<launch4j configFile="l4j/gaards.xml" />
-	</target>
-
-	<property name="jarbundler.dir" value="/Users/jgeorge/java/jarbundler-2.2.0"/>
-	<taskdef name="jarbundler"
-	             classname="net.sourceforge.jarbundler.JarBundler" classpath="${jarbundler.dir}/jarbundler-2.2.0.jar" />
-
-
-	<target name="bundler" description="Creates an Mac OS X application">
-
-	  <jarbundler dir="build/gaards"
-	              name="caGrid GAARDS UI"
-	              shortname="GAARDS"
-	              signature="gaar"
-	              mainclass="org.cagrid.grape.GAARDSApplication"
-	              jvmversion="1.6+"
-	              version="1.5"
-	              infostring="caGrid, copyright 2011"
-	              build="213"
-	  			vmoptions="-Djava.endorsed.dirs=$JAVAROOT/endorsed"
-	  			icon="/Users/jgeorge/Downloads/caGrid.icns"
-	    > 
-	                
-	    <!-- Adjust the look, feel and behavior -->
-	    
-	      <javaproperty name="apple.laf.useScreenMenuBar" value="true"/>
-	      <javaproperty name="apple.awt.brushMetal" value="true"/>
-	      <javaproperty name="apple.awt.showGrowBox" value="false"/>
-
-	      <javafileset dir="build/gaards">
-	        <include name="endorsed/*"/>
-	      </javafileset>
-	 	    
-	      <jarfileset dir="build/gaards">
-	  	  	<include name="caGrid-gaards-ui-1.5.jar" />
-	  	  	<include name="lib/*" />
-		  </jarfileset>		 
-	  	
-	  </jarbundler>
-	    
-	</target>
-
-
 </project>
